WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250753
[Legacy line layout] Zero height float boxes do not shrink/indent line boxes
https://bugs.webkit.org/show_bug.cgi?id=250753
Summary
[Legacy line layout] Zero height float boxes do not shrink/indent line boxes
alan
Reported
2023-01-17 20:55:58 PST
ssia
Attachments
Patch
(2.13 KB, patch)
2023-01-17 21:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-01-17 21:05:39 PST
Created
attachment 464532
[details]
Patch
EWS
Comment 2
2023-01-18 09:46:10 PST
Committed
259034@main
(3de390d56c49): <
https://commits.webkit.org/259034@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464532
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-01-18 09:47:18 PST
<
rdar://problem/104383818
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug