[Legacy line layout] Zero height float boxes do not shrink/indent line boxes https://bugs.webkit.org/show_bug.cgi?id=250753

Reviewed by Antti Koivisto.

This patch aligns legacy line layout behavior with IFC.

"
...
Note: this means that floats with zero outer height or negative outer height do not shorten line boxes.
...
"

https://www.w3.org/TR/CSS2/visuren.html#floats

* Source/WebCore/rendering/FloatingObjects.cpp:
(WebCore::FindNextFloatLogicalBottomAdapter::collectIfNeeded):
(WebCore::ComputeFloatOffsetAdapter<FloatTypeValue>::collectIfNeeded):

Canonical link: https://commits.webkit.org/259034@main